Bug 205602 - picture can't be display top-bottom, it is always rotated to the left or right
Summary: picture can't be display top-bottom, it is always rotated to the left or right
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Preview-Image (other bugs)
Version First Reported In: 0.9.4
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-29 19:10 UTC by Toralf Förster
Modified: 2018-03-23 11:25 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.7.0
Sentry Crash Report:


Attachments
Lisboa museum (727.77 KB, image/jpeg)
2009-08-29 19:11 UTC, Toralf Förster
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Toralf Förster 2009-08-29 19:10:45 UTC
Version:           0.9.4 (using 3.5.10, Gentoo)
Compiler:          Target: i686-pc-linux-gnu
OS:                Linux (i686) release 2.6.30.5

I'll attach a foto which is desplayed correctly eg with KView, but digikam shows it w/ 90° rotated to the right. If I rotate this specific picture it is rotated always in steps of 180 ° :-(
Comment 1 Toralf Förster 2009-08-29 19:11:57 UTC
Created attachment 36560 [details]
Lisboa museum
Comment 2 Julien Narboux 2009-08-29 19:43:34 UTC
0.9.4 is an old version please try 0.9.6 or 1.0.0beta3. I think I have encoutered this bug in the past and it as been solved already.

Cheers,

Julien
Comment 3 Toralf Förster 2009-08-29 20:49:30 UTC
(In reply to comment #2)
> 0.9.4 is an old version please try 0.9.6 or 1.0.0beta3. I think I have
> encoutered this bug in the past and it as been solved already.
Tried 0.9.6 - unfortunately issue isn't solved and I'd like to stay ad KDE 3.5.10 ate least for some weeks too - BTW here's the output of the command line :



tfoerste@n22 ~ $ digikam
Exif Orientation: 6
Transforming with option 0 0
Failed to load embedded RAW preview
Exif Orientation: 6
Failed to load embedded RAW preview
Exif Orientation: 1
Failed to load embedded RAW preview
Exif Orientation: 1
Exif Orientation: 6
Transforming with option 0 0
Failed to load embedded RAW preview
Exif Orientation: 6
Exif Orientation: 6
Transforming with option 0 6
Exif orientation tag set to: 1
'digikamyb7EMakipiplugin-rotate' is TIFF based RAW file and writing mode is disable with this libkexiv2 version. Metadata not saved.
Failed to load embedded RAW preview
Exif Orientation: 6
Exif Orientation: 6
Transforming with option 0 6
Exif orientation tag set to: 1
'digikamNxJafbkipiplugin-rotate' is TIFF based RAW file and writing mode is disable with this libkexiv2 version. Metadata not saved.
...
Comment 4 caulier.gilles 2009-08-29 20:54:46 UTC
update libkexi2 for KDE3 to last stable 0.1.9 and Exiv2 to 0.18.2 release...

Gilles Caulier
Comment 5 Toralf Förster 2009-08-30 10:21:54 UTC
Thx - I updated to these Gentoo packages :

=media-gfx/exiv2-0.18.2
=media-libs/libkexiv2-0.1.9
=media-libs/libkdcraw-0.1.9
=media-gfx/digikam-0.9.6

w/o success. FWIW last days I upgraded to

=x11-drivers/xf86-video-intel-2.8.1
=x11-base/xorg-server-1.6.3
=media-libs/mesa-7.5-r3

What I realized now, is that rotating seems to work for other pictures, however the thumbnail doesn't reflect is. But clicking at a picture shows the rotated result.
Comment 6 caulier.gilles 2009-08-30 10:32:08 UTC
Don't forget that tumbnails still in cache in your hard drive. To update it, with current album, press F5.

To update all thumbnails in cache, go to Tools menu, there is a option to run in batch... It will take a while of course.

Gilles Caulier
Comment 7 Toralf Förster 2009-08-30 11:50:45 UTC
(In reply to comment #6)
> Don't forget that tumbnails still in cache in your hard drive. To update it,
> with current album, press F5.
Already did it - it seems that all thumbnails never reflect the rotated images instead they always show the original orientation.

What I'm wondering about too is that the attached image (the only one between some hundreds of my holiday in Lisboa) can only be rotated to the right (and only w/ 180° steps) - probably I rotated it some monthe earlier already and that's why it have some strange exif info ?
Comment 8 Marcel Wiesweg 2009-09-12 17:26:56 UTC
The test image is rotated correctly (portrait) but the Exif tag is set so that it is displayed rotated by 90°.
The special case here is, if you rotate by 90° in the opposite direction, on operation on the image is required, just resetting the Exif flag is needed. And this is currently broken.
Comment 9 Marcel Wiesweg 2009-09-12 17:29:25 UTC
SVN commit 1022799 by mwiesweg:

Resetting the Exif rotation flag to NORMAL was broken for two reasons:
- if the rotation was a no-op and only resetting the flag was required,
  the method just returned, skipping the exif adjustment
- libkexiv2 would reject any file without suffix as non-supported RAW image.
  That is fixed now in libkexiv2 and by setting a suffix on the temp file

BUG: 205602


 M  +2 -0      imagerotate.cpp  
 M  +60 -40    jpegtransform.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1022799
Comment 10 Toralf Förster 2009-09-14 14:07:41 UTC
Any chance to have such a patch for the Gentoo package media-plugins/kipi-plugins-0.1.7 ? I tried to apply both patches but seems to be very different code sets between trunk and that (old) version ?