Resetting the Exif rotation flag to NORMAL was broken for two reasons: - if the rotation was a no-op and only resetting the flag was required,   the method just returned, skipping the exif adjustment - libkexiv2 would reject any file without suffix as non-supported RAW image.   That is fixed now in libkexiv2 and by setting a suffix on the temp file

BUG: 205602

svn path=/trunk/extragear/graphics/kipi-plugins/; revision=1022799